--- a/mktAI.ipynb
+++ b/mktAI.ipynb
@@ -79,8 +79,7 @@
    ],
    "source": [
     "# Solicita la clave de API de forma segura\n",
-    "# getpass(\"Escribe tu API Key aqui:\")\n",
-    "openai.api_key = \"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\""
+    "openai.api_key = getpass(\"Escribe tu API Key aqui:\")"
    ]
   },
   {
