--- a/mktAI.ipynb
+++ b/mktAI.ipynb
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install --upgrade openai\n",
+    "!pip install --upgrade openai # Actualice a la última versión de la biblioteca openai\n",
     "\n",
     "import os\n",
     "from openai import OpenAI\n",
@@ -55,31 +55,12 @@
     "import datetime\n",
     "from getpass import getpass\n",
     "\n",
-    "client = OpenAI()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "MhOMb4UlKsiZ",
-    "outputId": "f08c8c22-7a89-4077-ad4d-9098c9a320c2"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Escribe tu API Key aqui:··········\n"
-     ]
-    }
-   ],
-   "source": [
     "# Solicita la clave de API de forma segura\n",
-    "openai.api_key = getpass(\"Escribe tu API Key aqui:\")"
+    "# NUNCA codifiques directamente tu clave API en el código. Esto supone un riesgo de seguridad.\n",
+    "# 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\n",
+    "api_key = getpass(\"Por favor ingrese su clave API de OpenAI\")\n",
+    "\n",
+    "client = OpenAI(api_key=api_key)  # Pase la clave API al constructor de OpenAI"
    ]
   },
   {
@@ -137,9 +118,13 @@
     "    {\"role\": \"user\", \"content\": prompt}\n",
     "]\n",
     "\n",
+    "# Importe openai aquí para que esté dentro del alcance del bloque try\n",
+    "import openai # Asegúrate de que openai esté importado en el ámbito actual\n",
+    "\n",
     "while True:\n",
     "    try:\n",
-    "        response = openai.ChatCompletion.create(\n",
+    "        # Usa el objeto client para realizar la solicitud\n",
+    "        response = client.chat.completions.create(\n",
     "            model='gpt-4o',\n",
     "            messages=conversation,\n",
     "            max_tokens=3500,\n",
@@ -148,14 +133,14 @@
     "            frequency_penalty=0,\n",
     "            presence_penalty=0\n",
     "        )\n",
-    "        break  # Salir del bucle si la solicitud es exitosa\n",
+    "        break # Salir del bucle si la solicitud es exitosa\n",
     "    except openai.error.RateLimitError:\n",
-    "        print(\"Rate limit exceeded. Waiting for 60 seconds...\")\n",
-    "        time.sleep(60)  # Espere 60 segundos antes de volver a intentarlo\n",
+    "        print(\"Se ha excedido el límite de velocidad. Esperando 60 segundos...\")\n",
+    "        time.sleep(60) # Espere 60 segundos antes de volver a intentarlo\n",
     "\n",
     "# Accedo al texto de la respuesta\n",
     "message = response.choices[0]['message']\n",
-    "print(\"{}: {}\".format(message['role'], message['content']))\n"
+    "print(\"{}: {}\".format(message['role'], message['content']))"
    ]
   },
   {
@@ -175,7 +160,7 @@
     "# Realizar la solicitud del nuevo aviso\n",
     "while True:\n",
     "    try:\n",
-    "        response = openai.ChatCompletion.create(\n",
+    "        response = client.chat.completions.create(\n",
     "            model='gpt-4o',\n",
     "            messages=conversation,\n",
     "            max_tokens=3500,\n",
@@ -186,7 +171,7 @@
     "        )\n",
     "        break  # Salir del bucle si la solicitud es exitosa\n",
     "    except openai.error.RateLimitError:\n",
-    "        print(\"Rate limit exceeded. Waiting for 60 seconds...\")\n",
+    "        print(\"Se ha excedido el límite de velocidad. Esperando 60 segundos...\")\n",
     "        time.sleep(60)  # Espere 60 segundos antes de volver a intentarlo\n",
     "\n",
     "# Obtenga e imprima la nueva historia\n",
